@@ -1,3 +1,10 @@
+2006-01-22  Peter Johanson <peter@peterjohanson.com>
+
+	* src/FileUtils.cs: Use gnome-vfs to get the URI from the local path,
+	instead of just prepending "file://". Fixes issues with special
+	characters like '?', '#', etc. in filenames. Patch from Brian Kerrick
+	Nickel <brian.nickel@gmail.com>. Fixes bug #305895.
+
 2006-01-21  Peter Johanson <peter@peterjohanson.com>
 
 	* src/About.cs: Fix extra space in copyright string.
